Changelog for Alias (v1.2.1-SNAPSHOT)

2013-05-15 00:08:04 +0100    added tab completion to database (James Richardson)
2013-05-15 00:01:35 +0100    begin process to upgrade to BukkitUtilities 4.2.1 (James Richardson)
2013-05-14 23:56:20 +0100    update pom (James Richardson)

v1.2.0
2012-08-08 05:41:01 +0100    fix time formatting issues (James Richardson)
2012-08-08 05:25:43 +0100    timestamp last_seen (James Richardson)
2012-08-08 05:00:09 +0100    display header even if no names returned (James Richardson)
2012-08-08 04:59:46 +0100    deassociate players correctly (James Richardson)
2012-08-08 04:01:56 +0100    save both records (James Richardson)
2012-08-08 03:57:31 +0100    support new handler (James Richardson)
2012-08-08 03:56:34 +0100    deassociate both players from each other (James Richardson)
2012-08-08 03:38:16 +0100    change to Collection from List fixes #1 (James Richardson)
2012-08-08 03:04:00 +0100    changelog (James Richardson)
2012-08-07 00:11:00 +0100    preparing for snapshot release (James Richardson)
2012-08-06 02:34:24 +0100    reimplement delete command (James Richardson)
2012-08-06 02:18:08 +0100    reimplemented checkcommand (James Richardson)
2012-08-06 01:23:43 +0100    convert to using async event (James Richardson)
2012-08-06 01:23:14 +0100    code clean up (James Richardson)
2012-08-06 01:21:40 +0100    implement api (James Richardson)
2012-08-06 00:35:55 +0100    will reimplement once database testing is complete (James Richardson)
2012-08-06 00:30:24 +0100    update to AbstractPlugin and new frameworks (James Richardson)

v1.1.1
2012-08-02 09:52:42 +0100    prepare config for release (James Richardson)

v1.1.0
2012-08-02 09:37:23 +0100    now using parent pom (James Richardson)
2012-08-02 09:26:24 +0100    fix MissingKeyException (James Richardson)
2012-08-02 09:23:55 +0100    really fixed it this time (James Richardson)
2012-08-02 09:13:32 +0100    Fix NPE in PreLoginEvent (James Richardson)