@@ -1,7 +1,9 @@
 package name.richardson.james.bukkit.alias.query;
 
 import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 
 import org.bukkit.Bukkit;
 import org.bukkit.command.Command;
@@ -52,18 +54,31 @@ public final class DeleteCommand extends AbstractCommand {
   
   public List<String> onTabComplete(CommandSender sender, Command command, String label, String[] arguments) {
     List<String> list = new ArrayList<String>();
-    if (arguments.length <= 1) {
+    Set<String> temp = new HashSet<String>();
+    if (arguments.length < 2) {
       for (Player player : Bukkit.getServer().getOnlinePlayers()) {
         if (arguments.length < 1) {
-          list.add(player.getName());
+          temp.add(player.getName());
         } else if (player.getName().startsWith(arguments[0])) {
-          list.add(player.getName());
-        }
-        if (arguments[0].length() >= 3) {
-          list.addAll(PlayerNameRecord.getPlayersThatStartWith(database, arguments[0]));
+          temp.add(player.getName());
         }
       }
+      if (arguments[0].length() >= 3) {
+        temp.addAll(PlayerNameRecord.getPlayersThatStartWith(database, arguments[0]));
+      }
+    } else if (arguments.length < 3) {
+      for (Player player : Bukkit.getServer().getOnlinePlayers()) {
+        if (arguments.length < 1) {
+          temp.add(player.getName());
+        } else if (player.getName().startsWith(arguments[1])) {
+          temp.add(player.getName());
+        }
+      }
+      if (arguments[1].length() >= 3) {
+        temp.addAll(PlayerNameRecord.getPlayersThatStartWith(database, arguments[0]));
+      }
     }
+    list.addAll(temp);
     return list;
   }
 
