@@ -1,5 +1,6 @@
 Changelog for Alias (v1.2.1-SNAPSHOT)
 
+2013-05-15 00:18:37 +0100    changed bukkit utilities version again (James Richardson)
 2013-05-15 00:08:04 +0100    added tab completion to database (James Richardson)
 2013-05-15 00:01:35 +0100    begin process to upgrade to BukkitUtilities 4.2.1 (James Richardson)
 2013-05-14 23:56:20 +0100    update pom (James Richardson)
